// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates.Xhtml creates a body element 1`] = `
Object {
  "data": Array [
    123,
    37,
    32,
    98,
    111,
    100,
    121,
    32,
    37,
    125,
  ],
  "type": "Buffer",
}
`;

exports[`templates.Xhtml creates a body element 2`] = `
Array [
  "page.body.tmpl",
]
`;

exports[`templates.Xhtml creates a body element 3`] = `
"
                <!-- inject:js -->
                <!-- end:js -->
                <!-- inject:metadata -->
                <!-- end:metadata -->
            </body>
        </html>
        "
`;

exports[`templates.Xhtml creates a cover page 1`] = `
"
            <section class=\\"cover\\" style=\\"text-align: center; padding: 0; margin: 0;\\">
                <svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"100%\\" preserveAspectRatio=\\"xMidYMid meet\\" version=\\"1.1\\" viewBox=\\"0 0 1 1\\" width=\\"100%\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\">
                    <image width=\\"1\\" height=\\"1\\" xlink:href=\\"../test\\"/>
                </svg>
            </section>
        "
`;

exports[`templates.Xhtml creates a head element 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
            <html xmlns=\\"http://www.w3.org/1999/xhtml\\"
                xmlns:epub=\\"http://www.idpf.org/2007/ops\\"
                xmlns:ibooks=\\"http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\"
                epub:prefix=\\"ibooks: http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\">
            <head>
                <title></title>
                <meta http-equiv=\\"default-style\\" content=\\"text/html charset=utf-8\\"/>
                <meta name=\\"robots\\" content=\\"noindex,nofollow\\"/>
                <!-- inject:css -->
                <!-- end:css -->
            </head>
            <body>
        "
`;

exports[`templates.Xhtml creates a head element 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"no\\"?>
            <html xmlns=\\"http://www.w3.org/1999/xhtml\\"
                xmlns:epub=\\"http://www.idpf.org/2007/ops\\"
                xmlns:ibooks=\\"http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\"
                epub:prefix=\\"ibooks: http://vocabulary.itunes.apple.com/rdf/ibooks/vocabulary-extensions-1.0\\">
            <head>
                <title></title>
                <meta http-equiv=\\"default-style\\" content=\\"text/html charset=utf-8\\"/>
                <meta name=\\"robots\\" content=\\"index,follow\\"/>
                <!-- inject:css -->
                <!-- end:css -->
            </head>
            <body>
        "
`;

exports[`templates.Xhtml creates a script element 1`] = `"<script type=\\"application/javascript\\" src=\\"{% body %}\\"></script>"`;

exports[`templates.Xhtml creates an html document 1`] = `
Object {
  "data": Array [
    60,
    63,
    120,
    109,
    108,
    32,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    61,
    34,
    49,
    46,
    48,
    34,
    32,
    101,
    110,
    99,
    111,
    100,
    105,
    110,
    103,
    61,
    34,
    85,
    84,
    70,
    45,
    56,
    34,
    32,
    115,
    116,
    97,
    110,
    100,
    97,
    108,
    111,
    110,
    101,
    61,
    34,
    110,
    111,
    34,
    63,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    104,
    116,
    109,
    108,
    32,
    120,
    109,
    108,
    110,
    115,
    61,
    34,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    119,
    51,
    46,
    111,
    114,
    103,
    47,
    49,
    57,
    57,
    57,
    47,
    120,
    104,
    116,
    109,
    108,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    120,
    109,
    108,
    110,
    115,
    58,
    101,
    112,
    117,
    98,
    61,
    34,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    119,
    119,
    119,
    46,
    105,
    100,
    112,
    102,
    46,
    111,
    114,
    103,
    47,
    50,
    48,
    48,
    55,
    47,
    111,
    112,
    115,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    120,
    109,
    108,
    110,
    115,
    58,
    105,
    98,
    111,
    111,
    107,
    115,
    61,
    34,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    118,
    111,
    99,
    97,
    98,
    117,
    108,
    97,
    114,
    121,
    46,
    105,
    116,
    117,
    110,
    101,
    115,
    46,
    97,
    112,
    112,
    108,
    101,
    46,
    99,
    111,
    109,
    47,
    114,
    100,
    102,
    47,
    105,
    98,
    111,
    111,
    107,
    115,
    47,
    118,
    111,
    99,
    97,
    98,
    117,
    108,
    97,
    114,
    121,
    45,
    101,
    120,
    116,
    101,
    110,
    115,
    105,
    111,
    110,
    115,
    45,
    49,
    46,
    48,
    34,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    101,
    112,
    117,
    98,
    58,
    112,
    114,
    101,
    102,
    105,
    120,
    61,
    34,
    105,
    98,
    111,
    111,
    107,
    115,
    58,
    32,
    104,
    116,
    116,
    112,
    58,
    47,
    47,
    118,
    111,
    99,
    97,
    98,
    117,
    108,
    97,
    114,
    121,
    46,
    105,
    116,
    117,
    110,
    101,
    115,
    46,
    97,
    112,
    112,
    108,
    101,
    46,
    99,
    111,
    109,
    47,
    114,
    100,
    102,
    47,
    105,
    98,
    111,
    111,
    107,
    115,
    47,
    118,
    111,
    99,
    97,
    98,
    117,
    108,
    97,
    114,
    121,
    45,
    101,
    120,
    116,
    101,
    110,
    115,
    105,
    111,
    110,
    115,
    45,
    49,
    46,
    48,
    34,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    104,
    101,
    97,
    100,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    116,
    105,
    116,
    108,
    101,
    62,
    60,
    47,
    116,
    105,
    116,
    108,
    101,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    109,
    101,
    116,
    97,
    32,
    104,
    116,
    116,
    112,
    45,
    101,
    113,
    117,
    105,
    118,
    61,
    34,
    100,
    101,
    102,
    97,
    117,
    108,
    116,
    45,
    115,
    116,
    121,
    108,
    101,
    34,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    61,
    34,
    116,
    101,
    120,
    116,
    47,
    104,
    116,
    109,
    108,
    32,
    99,
    104,
    97,
    114,
    115,
    101,
    116,
    61,
    117,
    116,
    102,
    45,
    56,
    34,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    109,
    101,
    116,
    97,
    32,
    110,
    97,
    109,
    101,
    61,
    34,
    114,
    111,
    98,
    111,
    116,
    115,
    34,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    61,
    34,
    105,
    110,
    100,
    101,
    120,
    44,
    102,
    111,
    108,
    108,
    111,
    119,
    34,
    47,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    105,
    110,
    106,
    101,
    99,
    116,
    58,
    99,
    115,
    115,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    101,
    110,
    100,
    58,
    99,
    115,
    115,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    104,
    101,
    97,
    100,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    98,
    111,
    100,
    121,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    123,
    37,
    32,
    98,
    111,
    100,
    121,
    32,
    37,
    125,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    105,
    110,
    106,
    101,
    99,
    116,
    58,
    106,
    115,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    101,
    110,
    100,
    58,
    106,
    115,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    105,
    110,
    106,
    101,
    99,
    116,
    58,
    109,
    101,
    116,
    97,
    100,
    97,
    116,
    97,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    33,
    45,
    45,
    32,
    101,
    110,
    100,
    58,
    109,
    101,
    116,
    97,
    100,
    97,
    116,
    97,
    32,
    45,
    45,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    98,
    111,
    100,
    121,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    60,
    47,
    104,
    116,
    109,
    108,
    62,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    10,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
    32,
  ],
  "type": "Buffer",
}
`;

exports[`templates.Xhtml creates an html document 2`] = `
Array [
  "xhtml.document.tmpl",
]
`;

exports[`templates.Xhtml creates as link element 1`] = `"<link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"{% body %}\\"/>"`;

exports[`templates.Xhtml creates the loi elements 1`] = `
"
            <section epub:type=\\"loi\\" title=\\"Figures\\" class=\\"chapter figures\\">
                <header>
                    <h1>Figures</h1>
                </header>
            </section>
        "
`;
